--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "1+1"
+    "1 + 1"
    ],
    "outputs": [],
    "metadata": {}
@@ -61,9 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 3,
+   "source": [
+    "a = 1 + 1\n",
+    "print (a)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -75,9 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 4,
+   "source": [
+    "a"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "metadata": {}
   },
   {
@@ -89,9 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 5,
+   "source": [
+    "print (a)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -107,8 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 6,
+   "source": [
+    "a = a + 1"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -121,9 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 7,
+   "source": [
+    "a"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -153,9 +202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 8,
+   "source": [
+    "a = 5\n",
+    "b = 2\n",
+    "print (a,b)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5 2\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -169,9 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 14,
+   "source": [
+    " x = a\n",
+    " a = b\n",
+    " b = x\n",
+    "print(a,b)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2 5\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -185,9 +259,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 24,
+   "source": [
+    "print(\"a vaut\", a, \"et b vaut\", b)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a vaut 2 et b vaut 5\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -201,9 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 26,
+   "source": [
+    "a = \"hello world\"\n",
+    "print (a)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -716,9 +811,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -730,7 +824,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.9.7"
+  },
+  "interpreter": {
+   "hash": "ec862206d8405247e3003360a092d3abf3ebcc1b865015b16225ca27bd9434a9"
   }
  },
  "nbformat": 4,
