--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -338,9 +338,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 32,
+   "source": [
+    "type (5 == 2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
    "metadata": {}
   },
   {
@@ -358,9 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 33,
+   "source": [
+    "type ((5, 2))"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
    "metadata": {}
   },
   {
@@ -375,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "x = 1"
+   ],
    "outputs": [],
    "metadata": {
     "tags": []
@@ -393,8 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 39,
+   "source": [
+    "v = 149"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -409,9 +439,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 40,
+   "source": [
+    "v = 149 / 11\n",
+    "s = 149 % 11\n",
+    "print (v)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "13.545454545454545\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -428,9 +470,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 37,
+   "source": [
+    "print (3 * (10 / 3))\n",
+    "print (3 * (10 // 3))\n",
+    "print ((3 * 10) // 3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "10.0\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -450,9 +506,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 38,
+   "source": [
+    "x = 25645\n",
+    "if  x%2 == 0:\n",
+    "    print (\"pair\")\n",
+    "else : \n",
+    "    print (\"impair\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "impair\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -466,9 +536,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 41,
+   "source": [
+    "2 ** 256\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "115792089237316195423570985008687907853269984665640564039457584007913129639936"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -506,9 +589,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 44,
+   "source": [
+    "x = 0.2 + 0.4\n",
+    "if x > 0.6:\n",
+    "    print (\"supérieur\")\n",
+    "if x < 0.6:\n",
+    "    print ('inférieur')\n",
+    "if x == 0.6 : \n",
+    "    print (\"égal\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "supérieur\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -522,9 +621,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 46,
+   "source": [
+    "x = 0.5\n",
+    "x = x * 2 ** 30\n",
+    "int(x)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "536870912"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
    "metadata": {
     "tags": []
    }
