--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -41,11 +41,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "source": [
     "1 + 1"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
    "metadata": {}
   },
   {
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "source": [
     "a = 1 + 1\n",
     "print (a)"
@@ -421,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "source": [
     "v = 149"
    ],
@@ -439,18 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "source": [
-    "v = 149 / 11\n",
-    "s = 149 % 11\n",
-    "print (v)"
+    "print(x, \"=\", x/11, \"X 11\", \"+\", x%11)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "13.545454545454545\n"
+      "536870912.0 = 48806446.54545455 X 11 + 6.0\n"
      ]
     }
    ],
@@ -506,20 +515,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "source": [
     "x = 25645\n",
     "if  x%2 == 0:\n",
-    "    print (\"pair\")\n",
+    "    print (\"True\")\n",
     "else : \n",
-    "    print (\"impair\")"
+    "    print (\"False\")"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "impair\n"
+      "False\n"
      ]
     }
    ],
@@ -536,9 +545,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "source": [
-    "2 ** 256\n"
+    "2 ** 256"
    ],
    "outputs": [
     {
@@ -549,7 +558,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 56
     }
    ],
    "metadata": {
@@ -675,12 +684,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'"
+    "b = \"world\"\n",
+    "print(a + b)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "helloworld\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
