--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -545,20 +545,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "source": [
-    "2 ** 256"
+    "u = 2 ** 256\n",
+    "u = str(u)\n",
+    "len(u)\n",
+    "print (len(u))"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "115792089237316195423570985008687907853269984665640564039457584007913129639936"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 56
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "78\n"
+     ]
     }
    ],
    "metadata": {
@@ -573,9 +573,20 @@
    "metadata": {}
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 65,
    "source": [
-    "Ecrire l'expression qui donne le dernier chiffre du nombre référencé par la variable `a`."
+    "a = 156\n",
+    "print(a%10)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6\n"
+     ]
+    }
    ],
    "metadata": {}
   },
@@ -684,18 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "source": [
     "a = \"hello\"\n",
     "b = \"world\"\n",
-    "print(a + b)"
+    "print(a + \" \" + b)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "helloworld\n"
+      "hello world\n"
      ]
     }
    ],
@@ -721,9 +732,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 67,
+   "source": [
+    "print(a * 3)\n",
+    "print ((a + b) * 2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hellohellohello\n",
+      "helloworldhelloworld\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -767,9 +790,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 70,
+   "source": [
+    "print (a > b)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -797,11 +830,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "source": [
-    "a = \"32\""
+    "a = \"32\"\n",
+    "print (a * 2)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3232\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -815,9 +857,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 72,
+   "source": [
+    "int(64)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
    "metadata": {
     "tags": []
    }
