--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -886,9 +886,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 2,
+   "source": [
+    "s = input (\"Tape quelque chose au clavier\")\n",
+    "print (s)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -902,9 +913,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 4,
+   "source": [
+    "s = input (\"Tape quelque chose au clavier\")\n",
+    "print (s*2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
