--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -239,10 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "source": [
     "A = int(input(\"demander une année\"))\n",
-    "if (A%4 == 0 and A%100 != 0) :\n",
+    "if (A%4 == 0 and A%100 != 0) or A%400==0:\n",
     "    print (\"bissextile\")\n",
     "else :\n",
     "    print (\"non bissextile\")"
@@ -252,7 +252,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "non bissextile\n"
+      "bissextile\n"
      ]
     }
    ],
@@ -316,16 +316,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 51,
+   "source": [
+    "n=int(input(\"combien de nombres\"))\n",
+    "\n",
+    "total=0\n",
+    "\n",
+    "for i in range(0,n):\n",
+    "    x=int(input(\"donner le nombre\"))\n",
+    "    print (\"le nombre \",i, \" donné par 'utilisateur = \",x)\n",
+    "    total+=x\n",
+    "\n",
+    "print(\"la moyenne =\", total/n)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "le nombre  0  donné par 'utilisateur =  2\n",
+      "la moyenne = 2.0\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 54,
+   "source": [
+    "m=0\n",
+    "total=0\n",
+    "counter=1\n",
+    "while m!=1:\n",
+    "    m=int(input(\"donner un nombre\"))\n",
+    "    counter +=1\n",
+    "    total+=m \n",
+    "print(\"la moyenne =\", total/counter)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "le nombre 1  = 2\n",
+      "le nombre 2  = 3\n",
+      "le nombre 3  = 4\n",
+      "le nombre 4  = 5\n",
+      "le nombre 5  = 5\n",
+      "le nombre 6  = 5\n",
+      "le nombre 7  = 5\n",
+      "le nombre 8  = 6\n",
+      "le nombre 9  = 6\n",
+      "le nombre 10  = 6\n",
+      "le nombre 11  = 6\n",
+      "le nombre 12  = 6\n",
+      "le nombre 13  = 7\n",
+      "le nombre 14  = 7\n",
+      "le nombre 15  = 8\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_5171/521790934.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"donner un nombre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"le nombre\"\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0mcounter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" =\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mcounter\u001b[0m \u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/miniconda3/envs/l1-python/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1004\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1005\u001b[0m             )\n\u001b[0;32m-> 1006\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/miniconda3/envs/l1-python/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1049\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1050\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1051\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1052\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -343,16 +407,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 21,
+   "source": [
+    "n = 5\n",
+    "n_fact = 1\n",
+    "for i in range (1, n+1):\n",
+    "    n_fact*=i\n",
+    "print(n_fact)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 11,
+   "source": [
+    "n = int(input(\"entrer un numéro\"))\n",
+    "\n",
+    "while n<0:\n",
+    "    n = int(input(\"entrer un  numéro : \"))\n",
+    "\n",
+    "result=1\n",
+    "\n",
+    "for i in range(1,n+1):\n",
+    "    result*= i\n",
+    "\n",
+    "print(n, \"!=\",result)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3 != 6\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -385,9 +483,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 12,
+   "source": [
+    "day = 0\n",
+    "question1 = \"Is your birthday in set 1/?\"\n",
+    "answer = int(input(question1))\n",
+    "\n",
+    "if answer == 1 :\n",
+    "    day += 1\n",
+    "\n",
+    "question2 = \"Is your birthday in set 2/?\"\n",
+    "answer = int(input(question2))\n",
+    "\n",
+    "if answer == 1 :\n",
+    "    day += 2\n",
+    "\n",
+    "question3 = \"Is your birthday in set 3/ ?\"\n",
+    "answer = int(input(question3))\n",
+    "\n",
+    "if answer == 1 :\n",
+    "    day += 3\n",
+    "\n",
+    "question4 = \"Is your birthday in set 4/ ?\"\n",
+    "answer int(input(question4))\n",
+    "\n",
+    "if answer == 1:\n",
+    "    day += 4\n",
+    "\n",
+    "question5 = \"Is your birthday in set 5/ ?\"\n",
+    "answer int(input(question5))\n",
+    "\n",
+    "if answer == 1:\n",
+    "    day += 5"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4188489426.py, line 21)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_24526/4188489426.py\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    answer int(input(question4))\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -414,9 +552,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 24,
+   "source": [
+    "import random\n",
+    "x = random.randint(10,99)\n",
+    "print(x)\n",
+    "\n",
+    "a = int(input(\"guess the number\"))\n",
+    "\n",
+    "if a==x:\n",
+    "    print(10000)\n",
+    "elif a%10==x//10 and a//10==x%10:\n",
+    "    print(\"3000\")\n",
+    "elif a%10==x//10 or a%10==x%10 or a//10==x//10 or a//10==x%10:\n",
+    "    print(\"1000\")\n",
+    "else:\n",
+    "    print(\"0\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "59\n",
+      "10000\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -434,9 +596,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 31,
+   "source": [
+    "x = 75\n",
+    "total = 0\n",
+    "while x!=0:\n",
+    "    total += x%10\n",
+    "    x=x//10\n",
+    "print(total)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
