--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "source": [
     "a = \"hello\"\n",
     "b = \"world\"\n",
@@ -857,9 +857,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "source": [
-    "int(64)"
+    "int(32 * 2)"
    ],
    "outputs": [
     {
@@ -870,7 +870,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 11
     }
    ],
    "metadata": {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "source": [
     "s = input (\"Tape quelque chose au clavier\")\n",
     "print (s)"
@@ -896,7 +896,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n"
+      "1\n"
      ]
     }
    ],
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "source": [
     "s = input (\"Tape quelque chose au clavier\")\n",
     "print (s*2)"
@@ -923,7 +923,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\n"
+      "11\n"
      ]
     }
    ],
