--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "source": [
-    "temperature=-1\n",
+    "temperature=-3.7\n",
     "celsius=True\n",
     "\n",
     "if (celsius== True and temperature<0) or(celsius==False and temperature<=35):\n",
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "source": [
     "n = int(input(\"entrer un numéro\"))\n",
     "\n",
@@ -447,7 +447,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "3 != 6\n"
+      "2 != 2\n"
      ]
     }
    ],
@@ -843,9 +843,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 2,
+   "source": [
+    "n = 0\n",
+    "N = int(input(\"demander un nombre entier\"))\n",
+    "\n",
+    "while n ** 2 < N :\n",
+    "    n = n + 1\n",
+    "print(n)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
