--- a/cours/01_prise_en_main/01_premiers_pas.ipynb
+++ b/cours/01_prise_en_main/01_premiers_pas.ipynb
@@ -677,12 +677,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "a = 5\n",
     "print(type(a), type(7))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'int'> <class 'int'>\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -691,12 +699,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "a = 3.14\n",
     "print(type(a))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -705,12 +721,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "a = (5 < 2)\n",
     "print(a, type(a))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False <class 'bool'>\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -719,11 +743,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "print(type(\"hello world\"))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
