--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "source": [
     "s = input (\"Tape quelque chose au clavier\")\n",
     "print (s*2)"
@@ -923,7 +923,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "11\n"
+      "coucoucoucou\n"
      ]
     }
    ],
