--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -657,11 +657,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
-    " "
+    "\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2739542331.py, line 2)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/sm/hktwnky17fx62y88z0s3fh600000gn/T/ipykernel_30938/2739542331.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print len(m)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -727,9 +736,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 11,
+   "source": [
+    "import random\n",
+    "for n in range (1) :\n",
+    "    print (random.randint(0, 100))\n",
+    "p = int(input(\"saisir un nombre compris entre 0 et 99\"))\n",
+    "\n",
+    "if n < p :\n",
+    "    print (\"Plus petit\")\n",
+    "elif n > p :\n",
+    "    print (\"Plus grand\")\n",
+    "elif n == p :\n",
+    "    print (\"Trouvé!\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "92\n",
+      "Plus petit\n"
+     ]
+    }
+   ],
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
