--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -855,9 +855,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 16,
+   "source": [
+    "a = int(input(\"saisir un premier nombre entier positif ou négatif\"))\n",
+    "b = int(input(\"saisir un deuxième nombre entier positif ou négatif\"))\n",
+    "\n",
+    "if a + b < 0 :\n",
+    "    print (\"négatif\")\n",
+    "elif a + b > 0 :\n",
+    "    print (\"positif\")\n",
+    "elif a + b == 0 : \n",
+    "    print (\"nul\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "positif\n"
+     ]
+    }
+   ],
    "metadata": {
     "tags": []
    }
@@ -873,24 +891,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "source": [
-    "n = 0\n",
-    "N = int(input(\"demander un nombre entier\"))\n",
+    "x = 92\n",
+    "y = 42\n",
     "\n",
-    "while n ** 2 < N :\n",
-    "    n = n + 1\n",
-    "print(n)"
+    "a = int(input(\"saisir le résultat de la division entière de x par y\"))\n",
+    "while a != x // y :\n",
+    "    a = int(input(\"saisir le résultat de la division entière de x par y\"))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {
     "tags": []
    }
